--- a/deployment/uwsgi.ini
+++ b/deployment/uwsgi.ini
@@ -1,8 +1,9 @@
 [uwsgi]
 chdir = ./src
-module = wsgi:app
+module = src.wsgi:app
 master = true
 processes = 5
 threads = 2
-socket = vfs.fs.sock
+http-socket = :5000
+socket = ../vfs.fs.sock
 chmod-socket = 660
